--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        token: ${{ secrets.PORTFOLIO_TOKEN }}  # Might be required for deployment
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
