--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -9,36 +9,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    # - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    # - name: Build and Deploy React app to GitHub Pages
-      # uses: omkartapale/react-deployment-gh-pages@v1.0.0
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        token: ${{ secrets.PORTFOLIO_TOKEN }}  # Might be required for deployment
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-    - run : git config user.name github-actions
-      shell: bash
-    - run : git config user.email github-actions@github.com
-      shell: bash
-    - run : git --work-tree build add --all
-      shell: bash
-    - run : git commit -m "Automatic Build and Deploy run by GitHub Actions"
-      shell: bash
-    - run : git push origin HEAD:gh-pages --force
-      shell: bash
+    - name: Build and Deploy React app to GitHub Pages
+      uses: omkartapale/react-deployment-gh-pages@v1.0.0
       with:
         # Configure deployment options as needed by the chosen action
         token: ${{ secrets.PORTFOLIO_TOKEN }}  # Might be required for deployment
