--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -17,5 +17,5 @@ jobs:
       uses: omkartapale/react-deployment-gh-pages@v1.0.0
       with:
         # Configure deployment options as needed by the chosen action
-        token: ${{ secrets.PORTFOLIO_TOKEN }}  # Might be required for deployment
+        token: ${{ secrets.PORTFOLIO_TOKEN }}  # Might be required for deployment - testing
 
