--- a/.github/workflows/node-gh-pages-ci-cd.yml
+++ b/.github/workflows/node-gh-pages-ci-cd.yml
@@ -1,5 +1,4 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: React - gh-pages - CI/CD
 
 on:
   # Runs on pushes targeting the default branch
@@ -44,12 +43,6 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
-
-      # - name: Build with Jekyll
-      #   uses: actions/jekyll-build-pages@v1
-      #   with:
-      #     # source: ./
-      #     destination: ./build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
