--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "itsvinodadari-portfolio",
+  "name": "vinodadari-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,10 +12,8 @@
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://vinodadari.github.io",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
     "node-sass": "^7.0.3",
     "sass-loader": "^13.2.2"
   }
