--- a/.github/workflows/node-gh-pages-ci-cd.yml
+++ b/.github/workflows/node-gh-pages-ci-cd.yml
@@ -5,9 +5,6 @@ on:
   push:
     branches: ["dev"]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -25,7 +22,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4 # https://github.com/marketplace/actions/checkout
 
@@ -33,7 +29,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
